--- a/stash-cucumber-reports-core/pom.xml
+++ b/stash-cucumber-reports-core/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>stash-cucumber-reports-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -26,7 +28,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>co.elastic.clients</groupId>
